@@ -1,3 +1,8 @@
+Fri Aug 28 09:30:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>
+
+	* WebServer.[hm]: Add support for limiting maximum number of incoming
+	sessions permitted from mone host.
+
 Tue Aug 24 14:30:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>
 
 	* WebServer.[hm]: Add support for HTTP/1.1 persistent connections.
